fix background on iOS and use hash for css file

--- a/src/partials/home.scss
+++ b/src/partials/home.scss
@@ -3,13 +3,18 @@
 @import "../styles/helpers/vars";
 
 .l-home {
-  background: url("../images/home-background.png") fixed;
-  background-size: cover;
+  background: url("../images/home-background.jpg");
   background-position: center;
+  background-size: cover;
   max-width: 100vw;
   height: 70rem;
   min-height: 25rem;
   max-height: 80vh;
+  
+  @include breakpoint(668px) {
+    // unsupported in iOS when used with "bg-size: cover"
+    background-attachment: fixed;
+  }
 
   > .l-content-wrapper {
     background: linear-gradient(to right, rgba(0, 0, 0, 0.8), transparent);
